2012-12-11  Richard Biener  <rguenther@suse.de>

	PR other/54324
	* doc/install.texi (Tools/packages necessary for building GCC):
	State ISO C++98 host compiler requirement.  Increment minimum
	GCC version required for building all languages for a cross-compiler
	to 3.4 or later.

2012-12-11  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/55079
	* tree-vrp.c (extract_range_from_binary_expr_1): Handle MAX/MIN_EXPR
	for more cases.
	(register_edge_assert_for_2): Register asserts for post-in/decrement
	tests.
	(check_array_ref): Dump what expression we emit array bound
	warnings for.
	(search_for_addr_array): Likewise.

2012-12-11  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (prepare_decl_rtl) <ADDR_EXPR>: Generate RTL
	only for a DECL which HAS_RTL_P.

2012-12-11  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/predicates.md ("execute_operation"): New predicate.
	* config/s390/s390.md ("*execute_rl", "*execute"): Use the new
	predicate.

2012-12-10  Xinliang David Li  <davidxl@google.com>

	* config/i386/i386.c: Enable push/pop in pro/epilogue for modern CPUs.

2012-12-10  Steve Ellcey  <sellcey@mips.com>

	* config/mips/gnu-user.h (NO_SHARED_SPECS): Add space before option.

2012-12-10  Steve Ellcey  <sellcey@mips.com>

	PR target/54061
	* rtl.h (IGNORED_DWARF_REGNUM): New.
	* dwarf2out.c (reg_loc_descriptor): Check for IGNORED_DWARF_REGNUM.
	(mem_loc_descriptor): Ditto.
	* config/mips/mips.h (ALL_COP_REG_FIRST): New.
	(ALL_COP_REG_LAST): New.
	(ALL_COP_REG_NUM): Redefine using above macros.
	* config/mips/mips.c (mips_option_override): Set mips_dbx_regno
	coprocessor entries to IGNORED_DWARF_REGNUM.

2012-12-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR lto/55466
	* lto-symtab.c (lto_symtab_merge_decls_1): Don't record the
	prevailing variable.
	* lto.c (lto_register_var_decl_in_symtab): Don't record static
	variables.
	(lto_main): Record the global variables if WPA isn't enabled.
